# sisg-mcmc-opengl-computer-demos

./: .gitignore  .gitmodules  Makefile.am  Makefile.in  README.md  config.status  configure
MCMC_Demos/: BACKUP_InbredP_PreDefdViews.txt  BACKUP_hweq_userdefd  ChromoSeg_PreDefdViews.txt  GFClasses4Pritch.txt  InbredP_PreDefdViews.txt  InbredP_PreDefdViews.txt_BACKUP  InbredP_UserDefdViews.txt  InbreedingDataForNewHybs.txt  KlamHweqInput.txt  NewHybrids_UserDefdViews.txt  Pedagogy_PreDefdViews.txt  PritchEtc_PreDefdViews.txt  PritchEtc_UDColorSchemes.txt  PritchEtc_UserDefdViews.txt  PritchQsOut.txt  RunNewHybs.sh  ScottishKittiesForNewHybs.txt  ddata  hweq_PreDefdViews.txt  mc3demo_UserDefdViews.txt  testdata  tpm_UserDefdViews.txt
src/: GLUT_for_PritchEtc.c  GLUT_for_PritchEtc.h  MAZ4NewHybs.h  MargAllocDataProb.c  MargAllocZ.c  PritchFuncts.c  inbred_p.c
src/.deps/: inbred_p-inbred_p.Po  mc3demo-mc3demo.Po  pritch-GLUT_for_PritchEtc.Po  pritch-MargAllocDataProb.Po  pritch-MargAllocZ.Po  pritch-PritchFuncts.Po  tpm-tpm.Po
